# codeagent

./: .clang-format  .coderabbit.yaml  .codespellrc  .gitignore  .globalconfig  .guardrails-exceptions.toml  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.baseline  .suppression-allowlist  CLAUDE.md  Directory.Build.props  LICENSE  README.md  biome.json  config-registry.json  install.sh  pyproject.toml  requirements-audit.txt  ruff.toml  rustfmt.toml  stylua.toml  uninstall.sh
.claude/: coderabbitresponse.md  letta-agent  project-info
.claude-plugin/: plugin.json
.githooks/: pre-commit
.github/workflows/: check.yml
Docs/: ClaudeCodeConfigWorkflow.md  GitHubRepoStructure.md  Implementation.md  McpInstallWorkflow.md  ProjectVision.md
agents/: architect.md  implementer.md  learner.md  orchestrator.md  researcher.md  reviewer.md
commands/: implement.md  integrate.md  plan.md  review.md  scan.md
config/: monitoring.conf
configs/: .clang-format  .globalconfig  .markdownlint.jsonc  Directory.Build.props  biome.json  languages.yaml  ruff.toml  rustfmt.toml
docs/: current-mcp-architecture.md  lint-exception-policy.md  mcp-tool-reference.md  self-hosted-services.md  surrealdb-schema-reference.md  worktree-integration.md
docs/ideas/: enterprise-memory-patterns.md  future-ideas.md  surrealdb-advanced-features.md  unified-memory-system.md  worktree-future-enhancements.md
docs/plans/: epic6-unified-mcp.md  epic7-plugin-migration.md  epic8-archive-and-docs.md
framework/: settings.json.template
framework/agents/: analyst.md  architect.md  implementer.md  indexer.md  learner.md  memory-writer.md  orchestrator.md  researcher.md  reviewer.md  validator.md
framework/commands/: analyze.md  backlog.md  implement.md  integrate.md  plan.md  review.md  scan.md
framework/hooks/: auto-format.sh  dangerous-command-check.sh  greeter.sh  index-file.sh  post-implement.sh  pre-commit.sh  pre-push.sh  session-end.sh  worktree-context.sh
framework/references/: codebase-indexing.md  deviation-rules.md  execution-strategies.md  git-worktrees.md  knowledge-system.md  task-formats.md  task-states.md  xml-task-format.md
framework/skills/architect/: SKILL.md
framework/skills/bandit/: SKILL.md
framework/skills/bash/: SKILL.md
framework/skills/biome/: SKILL.md
framework/skills/brainstorming/: SKILL.md
framework/skills/cli-tools/: SKILL.md
framework/skills/codespell/: SKILL.md
framework/skills/cpp/: SKILL.md
framework/skills/dotnet/: SKILL.md
framework/skills/editorconfig/: SKILL.md
framework/skills/external-services/: SKILL.md
framework/skills/figma/: SKILL.md
framework/skills/frontend/: SKILL.md
framework/skills/gitleaks/: SKILL.md
framework/skills/implementer/: SKILL.md
framework/skills/learner/: SKILL.md
framework/skills/lua/: SKILL.md
framework/skills/markdownlint/: SKILL.md
framework/skills/mypy/: SKILL.md
framework/skills/orchestrator/: SKILL.md
framework/skills/pip-audit/: SKILL.md
framework/skills/postgresql/: SKILL.md
framework/skills/pyright/: SKILL.md
framework/skills/pytest/: SKILL.md
framework/skills/python/: SKILL.md
framework/skills/quality-gates/: SKILL.md
framework/skills/researcher/: SKILL.md
framework/skills/reviewer/: SKILL.md
framework/skills/ruff/: SKILL.md
framework/skills/rust/: SKILL.md
framework/skills/rustfmt/: SKILL.md
framework/skills/semgrep/: SKILL.md
framework/skills/shellcheck/: SKILL.md
framework/skills/skill-creator/: SKILL.md
framework/skills/spec-driven/: SKILL.md
framework/skills/stylua/: SKILL.md
framework/skills/supabase/: SKILL.md
framework/skills/systematic-debugging/: SKILL.md
framework/skills/taplo/: SKILL.md
framework/skills/tdd/: SKILL.md
framework/skills/vulture/: SKILL.md
framework/templates/planning/: PLAN.md.template  STATE.md.template  SUMMARY.md.template
framework/templates/project/: PROJECT.md.template  (+2 more)
infrastructure/: docker-compose.yml
infrastructure/neo4j/: init.cypher
infrastructure/services/: appwrite.yml  convex.yml  penpot.yml
lib/hooks/: format-and-stage.sh
mcps/: TODO.md  install-mcps.sh  mcp-registry.json
mcps/amem-mcp/: README.md  pyproject.toml
mcps/amem-mcp/src/amem_mcp/: __init__.py  server.py
mcps/code-graph-mcp/: README.md  pyproject.toml
mcps/code-graph-mcp/src/code_graph_mcp/: __init__.py  server.py
mcps/installers/: install-code-execution.sh  install-docker-mcps.sh  install-letta.sh  install-npm-mcps.sh  install-python-mcps.sh  install-self-hosted.sh
mcps/reflection-mcp/: README.md  pyproject.toml
mcps/reflection-mcp/src/reflection_mcp/: server.py
mcps/tot-mcp/: README.md  pyproject.toml
mcps/tot-mcp/src/tot_mcp/: __init__.py  server.py
scripts/: backup-memory.sh  fix-all.sh  health-check.sh  install-appwrite-full.sh  install-claude-config.sh  install-tools.sh  restore-memory.sh  update.sh
skills/architect/: SKILL.md
skills/implementer/: SKILL.md
skills/learner/: SKILL.md
skills/orchestrator/: SKILL.md
skills/researcher/: SKILL.md
skills/reviewer/: SKILL.md
src/codeagent/: __init__.py
templates/: .coderabbit.yaml  CLAUDE.md.template  skill-template.md
templates/cpp/: CLAUDE.md
templates/dotnet/: CLAUDE.md
templates/lua/: CLAUDE.md
templates/pre-commit/: base.yaml  cpp.yaml  dotnet.yaml  go.yaml  lua.yaml  node.yaml  python.yaml  rust.yaml  shell.yaml
templates/rust/: CLAUDE.md
templates/workflows/: check.yml  claude-review.yml
tests/: __init__.py  conftest.py  test_db_client.py  test_embeddings.py  test_init.py
tests/guardrails/: test_generators.py  test_registry.py
tests/init/: __init__.py  test_detector.py  test_precommit.py
tests/mcp/: __init__.py  test_common.py  test_embedding_service.py  test_memory.py  test_memory_service.py  test_memory_tools.py  test_models_init.py  test_reflection_service.py  test_reflection_tools.py  test_schema.py  test_search_service.py  test_server.py  test_task.py  test_task_service.py  test_task_tools.py
tests/sandbox/: .gitignore  Dockerfile  README.md  docker-compose.yml  run-tests.sh  test-quick.sh  test.sh
(+43 files in other folders)
