[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeagent"
version = "0.1.0"
description = "Accuracy-optimized AI coding framework with persistent memory, structured reasoning, and TDD enforcement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Questi0nM4rk" }]
keywords = ["ai", "coding", "claude", "mcp", "tdd", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.0.0",
  "mcp>=1.0.0",
  "surrealdb>=0.3.0",
  "pyyaml>=6.0",
  "sentence-transformers>=2.2.0",
  "tree-sitter>=0.20.0",
  "tree-sitter-languages>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "ruff>=0.8.0",
  "pyright>=1.1.0",
  "pre-commit>=3.0",
]

[project.scripts]
codeagent = "codeagent.cli.main:app"
codeagent-mcp = "codeagent.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Questi0nM4rk/codeagent"
Repository = "https://github.com/Questi0nM4rk/codeagent"

[tool.hatch.build.targets.wheel]
packages = ["src/codeagent"]

[tool.hatch.build.targets.sdist]
include = ["configs/**", "templates/**"]

[tool.hatch.build.targets.wheel.shared-data]
"configs" = "share/codeagent/configs"
"templates" = "share/codeagent/templates"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
strictListInference = true
strictDictionaryInference = true
reportMissingTypeStubs = false
