[project]
name = "amem-mcp"
version = "0.1.0"
description = "A-MEM MCP server - Brain-like memory with automatic linking and evolution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
full = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "spacy>=3.7.0",
]

[project.scripts]
amem-mcp = "amem_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/amem_mcp"]
