[project]
name = "code-graph-mcp"
version = "0.1.0"
description = "Code knowledge graph MCP server using Neo4j and Tree-sitter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-lua>=0.0.19",
    "tree-sitter-bash>=0.23.0",
]

[project.scripts]
code-graph-mcp = "code_graph_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_graph_mcp"]
