[project]
name = "tot-mcp"
version = "0.1.0"
description = "Tree-of-Thought reasoning MCP server for systematic solution exploration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
tot-mcp = "tot_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tot_mcp"]
